<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/permission_rationale_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:text="@string/permission_rationale_header"
        android:textSize="16sp"
        android:textColor="@color/green_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/permission_rationale_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/permission_rational_body"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/permission_rationale_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/permissions_rationale_allow_pressable_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_rationale_allow"
        android:layout_margin="8dp"
        android:textColor="@color/green_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_rationale_body"
        />

    <TextView
        android:id="@+id/permissions_rational_deny_pressable_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_rationale_deny"
        android:layout_margin="14dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/permissions_rationale_allow_pressable_component"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_rationale_body"
        />


</androidx.constraintlayout.widget.ConstraintLayout>