<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weight.user_weights">

    <LinearLayout
        android:id="@+id/page_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:background="?attr/colorPrimaryDark">

            <ImageButton
                android:id="@+id/dropdown_menu_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:contentDescription="@string/menu_icon_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/menu_svgrepo_com" />

            <TextView
                android:id="@+id/appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/appbar_title"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/set_goal_weight_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/new_weight_icon_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/goal_svgrepo_com" />


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/header_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/date_card_layout"
                android:layout_width="fill_parent"
                android:layout_height="144dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/date_card_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rounded_rectangle_filled_svgrepo_com"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_card_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Feb 7, 2025"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weight_card_layout"
                android:layout_width="fill_parent"
                android:layout_height="144dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/weight_card_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rounded_rectangle_filled_svgrepo_com"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weight_card_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="175 lb"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/goal_weight_card_layout"
                android:layout_width="fill_parent"
                android:layout_height="144dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/goal_weight_card_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rounded_rectangle_filled_svgrepo_com"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/goal_weight_card_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Goal: 170 lb"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

            <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/weights_container"
            android:background="@color/green_3"
            tools:listitem="@layout/recycler_view_weight_item"
            />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/green_2"
        android:src="@drawable/add_circle_svgrepo_com"
        android:contentDescription="@string/fab"
        />


</androidx.constraintlayout.widget.ConstraintLayout>